# neoterm

./: Cargo.toml  README.md  TODO.md
src/: block.rs  input.rs  main.rs  pty.rs  renderer.rs  shell.rs  state.rs  ui.rs
src/agent_mode_eval/: mod.rs
src/asset_macro/: mod.rs
src/command/: mod.rs
src/config/: mod.rs  preferences.rs  theme.rs  yaml_theme.rs  yaml_theme_manager.rs
src/drive/: mod.rs
src/fuzzy_match/: mod.rs
src/graphql/: mod.rs
src/integration/: mod.rs
src/languages/: mod.rs
src/lpc/: mod.rs
src/markdown_parser/: mod.rs
src/mcq/: mod.rs
src/natural_language_detection/: mod.rs
src/resources/: mod.rs
src/serve_wasm/: mod.rs
src/settings/: keybinding_editor.rs  mod.rs  theme_editor.rs  yaml_theme_ui.rs
src/string_offset/: mod.rs
src/sum_tree/: mod.rs
src/syntax_tree/: mod.rs
src/virtual_fs/: mod.rs
src/watcher/: mod.rs
src/websocket/: mod.rs
src/workflows/: executor.rs  manager.rs  mod.rs  ui.rs
themes/: gruvbox-dark.yaml  nord.yaml
workflows/: docker-cleanup.yaml  find-large-files.yaml  git-status.yaml
